--- a/src/css/index.css
+++ b/src/css/index.css
@@ -7,7 +7,7 @@ body {
     font-family: 'Noto Sans KR', sans-serif !important;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #ecf0f1;
+    background-color: #111827;
 }
 
 code {
